--- a/app/src/main/res/layout/grid_item.xml
+++ b/app/src/main/res/layout/grid_item.xml
@@ -12,16 +12,17 @@
         android:id="@+id/img"
         android:layout_width="wrap_content"
         android:layout_height="150dp"
+        android:layout_gravity="center"
         android:background="@drawable/ic_launcher_background"
         android:src="@drawable/ic_launcher_foreground" />
 
     <TextView
         android:id="@+id/title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="164dp"
+        android:layout_height="48dp"
+        android:gravity="center"
         android:text="Title"
-        android:textStyle="bold"
-        android:textSize="18sp"
-        android:gravity="center"/>
+        android:textSize="13sp"
+        android:textStyle="bold" />
 
 </LinearLayout>
